# bot

./: .gitignore  Cargo.toml  README.md  config.yaml  copyall.bat  run.bat  watch.bat
src/: config.rs  main.rs  motioncontroller.rs  motorcontroller.rs  motorstepper.rs  node.rs  producernode.rs  testnode.rs
src/behavior/: botnet_behavior.rs  botnet_watcher.rs  main.rs  mod.rs  move_into_shoot_position.rs  shoot_into_goal.rs
src/behavior/bt/: action.rs  mod.rs  repeat.rs  sequence.rs
src/intercom/: main.rs
src/kicker/: main.rs
src/manager/: main.rs
src/math/: mod.rs  vec2.rs
src/motioncontroll/: mod.rs  motioncontroller.rs
src/perception/: mod.rs  simulation.rs
src/wheelcontroller/: mod.rs  wc_gpio.rs  wc_sim.rs
