[package]
name = "aptivbot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
raspberry = ["dep:rppal"]
simulation = ["dep:reqwest"]

[dependencies]
tokio = { version = "1.17", features = ["full"] } 
async-trait = "0.1.58"
futures = "0.3.25"
rppal = { version = "0.14.0", optional = true }
ctrlc = "3.2.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
reqwest = { version = "0.11", optional = true }